--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
 	<meta name="description" content="Armando Souza | Full Stack Developer | HTML, Javascript, React, Node.js">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 	<link rel="stylesheet" href="./css/styles.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
 	<title>Armando Souza | Portfólio</title>
-	<link rel="favicon" href="https://cdn2.iconfinder.com/data/icons/seo-web/512/website-code-512.png">
+	<link rel="icon" type="image/x-icon" href="https://cdn2.iconfinder.com/data/icons/seo-web/512/website-code-512.png">
 </head>
 <body class="has-navbar-fixed-top">
 	<nav class="navbar is-transparent is-fixed-top" role="navigation" aria-label="main navigation">
 		<div class="navbar-brand">
 			<a class="navbar-item" href="#">
-				<h1 class="title has-text-primary">Armando Souza</h1>
+				<h1 class="titulo">Armando Souza</h1>
 			</a>
 			<a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBurger">
 		      <span aria-hidden="true"></span>
@@ -39,10 +40,96 @@
 			</div>
 			<div class="navbar-end">
 				<div class="navbar-item">
-					<a class="button is-primary">Entrar em contato</a>
+					<a class="button is-primary is-rounded">Entrar em contato</a>
 				</div>
 			</div>
 		</div>
 	</nav>
+	<section class="hero is-fullheight hero-background">
+		<div class="hero-body">
+			<div class="columns has-text-white is-size-2">
+				<div class="column has-text-weight-light">
+					<p class="is-shadow has-text-weight-medium">Armando Souza</p>
+					<p class="is-size-4 mt-3">Desenvolvedor Web Full Stack Jr | Javascript</p>
+					<hr class="dropdown-divider" />
+					<div class="mt-4 has-text-weight-medium">
+						<a class="button is-primary"><i class="fa-solid fa-laptop-code mr-2"></i>Meus Projetos</a>
+						<a class="button ml-3 is-primary"><i class="fa-solid fa-list-check mr-2"></i>Currículo</a>
+						<a class="button ml-3 is-primary"><i class="fa-solid fa-comment mr-2"></i>Contato</a>
+					</div>
+				</div>
+				<div class="column column-background is-size-3 mt-3">
+					<p>Olá, sou desenvolvedor web full stack júnior movido a desafios. Caso queira entrar em contato comigo, basta clicar em Contato!</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="section projects">
+		<h2 class="title is-2 has-text-centered is-shadow">
+			Meus Projetos
+		</h2>
+		<h3 class="subtitle mt-3 is-3 has-text-centered">
+			Confira meus principais projetos abaixo:
+		</h3>
+		<div class="is-flex is-flex-direction-row is-flex-wrap-wrap is-justify-content-space-around">
+			<div class="card mt-4 has-card-hover is-clickable">
+				<div class="card-image">
+					<figure class="image is-16by9">
+						<img src="https://github.com/armandosouza/burgeria/raw/main/assets/screenshots/3.png" width="320" class="image-card" alt="Projeto Burgeria">
+					</figure>
+				</div>
+				<div class="card-content">
+					<div class="media">
+						<div class="media-content">
+							<p class="title is-4"><i class="fa-solid fa-code mr-2"></i>Projeto Burgeria</p>
+							<p class="subtitle is-6"><i class="fa-solid fa-cubes mr-2"></i>HTML, CSS, Javascript</p>
+						</div>
+					</div>
+				</div>
+				<div class="content mx-5 mb-3">
+					Site responsivo de uma hamburgueria fictícia, feito com HTML, CSS e Javascript.
+				</div>
+			</div>
+			<div class="card mt-4 has-card-hover is-clickable">
+				<div class="card-image">
+					<figure class="image is-16by9">
+						<img src="https://github.com/armandosouza/burgeria/raw/main/assets/screenshots/3.png" width="320" class="image-card" alt="Projeto Burgeria">
+					</figure>
+				</div>
+				<div class="card-content">
+					<div class="media">
+						<div class="media-content">
+							<p class="title is-4"><i class="fa-solid fa-code mr-2"></i>Projeto Burgeria</p>
+							<p class="subtitle is-6"><i class="fa-solid fa-cubes mr-2"></i>HTML, CSS, Javascript</p>
+						</div>
+					</div>
+				</div>
+				<div class="content mx-5 mb-3">
+					Site responsivo de uma hamburgueria fictícia, feito com HTML, CSS e Javascript.
+				</div>
+			</div>
+			<div class="card mt-4 has-card-hover is-clickable">
+				<div class="card-image">
+					<figure class="image is-16by9">
+						<img src="https://github.com/armandosouza/burgeria/raw/main/assets/screenshots/3.png" width="320" class="image-card" alt="Projeto Burgeria">
+					</figure>
+				</div>
+				<div class="card-content">
+					<div class="media">
+						<div class="media-content">
+							<p class="title is-4"><i class="fa-solid fa-code mr-2"></i>Projeto Burgeria</p>
+							<p class="subtitle is-6"><i class="fa-solid fa-cubes mr-2"></i>HTML, CSS, Javascript</p>
+						</div>
+					</div>
+				</div>
+				<div class="content mx-5 mb-3">
+					Site responsivo de uma hamburgueria fictícia, feito com HTML, CSS e Javascript.
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<a class="button is-primary is-rounded"></a>
+		</div>
+	</section>
 </body>
 </html>
