--- a/pages/curriculo.html
+++ b/pages/curriculo.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Armando Souza | Full Stack Developer | HTML, Javascript, React, Node.js">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer">
 	<link rel="stylesheet" href="../css/styles.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
@@ -14,7 +15,7 @@
 <body>
 	<navbar class="navbar is-transparent is-fixed-top" role="navigation" aria-label="main navigation">
 		<div class="navbar-brand">
-			<a class="navbar-item" href="#">
+			<a class="navbar-item" href="../index.html">
 				<i class="fa-solid fa-laptop-code is-size-4 mr-1"></i><h1 class="titulo">Armando Souza</h1>
 			</a>
 			<a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBurger">
@@ -26,16 +27,16 @@
 		<div id="navbarBurger" class="navbar-menu">
 			<div class="navbar-start">
 				<div class="navbar-item has-dropdown is-hoverable">
-					<a href="#projects" class="navbar-link">Projetos</a>
+					<a href="../index.html#projects" class="navbar-link">Projetos</a>
 					<div class="navbar-dropdown">
 						<a class="navbar-item" href="">Front-end</a>
 						<a class="navbar-item" href="">Back-end</a>
 						<a class="navbar-item" href="">Full Stack</a>
 					</div>
 				</div>
-				<a href="./pages/curriculo.html" class="navbar-item">Currículo</a>
-				<a href="./pages/curriculo.html#educacao" class="navbar-item">Educação</a>
-				<a href="./pages/sobre.html" class="navbar-item">Sobre</a>
+				<a href="#" class="navbar-item has-background-primary">Currículo</a>
+				<a href="#educacao" class="navbar-item">Educação</a>
+				<a href="./sobre.html" class="navbar-item">Sobre</a>
 			</div>
 			<div class="navbar-end">
 				<div class="navbar-item">
@@ -44,5 +45,88 @@
 			</div>
 		</div>
 	</navbar>
+	<div class="resume">
+		<section class="section container">
+			<h1 class="title is-2 mt-5 has-text-centered has-text-white">Currículo</h1>
+			<div class="tile is-ancestor">
+				<div class="tile is-3 is-vertical is-parent">
+					<div class="tile is-child box has-text-centered">
+						<img src="https://avatars.githubusercontent.com/u/55011082?v=4" width="120" alt="Minha foto" class="profile-photo">
+						<p class="is-size-6">Armando Bruno Santos de Souza</p>
+						<hr class="dropdown-divider" />
+						<p class="subtitle is-6">Desenvolvedor Full Stack Jr. | UI Designer</p>
+						<p class="subtitle is-7 py-1 has-text-weight-medium has-background-dark has-text-white"><i class="fa-solid fa-phone mr-1"></i>Contato</p>
+						<nav class="is-flex is-flex-direction-column">
+							<a class="is-size-6" href="https://github.com/armandosouza"><i class="fa-brands fa-github"></i> Github</a>
+							<a class="is-size-6" href="https://linkedin.com/in/armandobssouza"><i class="fa-brands fa-linkedin"></i> Linkedin</a>
+							<a class="is-size-6" href="mailto://armandobssouza@hotmail.com"><i class="fa-solid fa-at"></i> Email</a>
+							<a class="is-size-6" href="https://wa.link/c08ytx"><i class="fa-brands fa-whatsapp"></i> Whatsapp</a>
+							<a class="is-size-6" href="tel: 21 959310662"><i class="fa-solid fa-phone-volume"></i> Telefone</a>
+						</nav>
+						<hr />
+						<p class="subtitle is-7 py-1 has-text-weight-medium has-background-dark has-text-white"><i class="fa-solid fa-list-check mr-1"></i>Competências</p>
+						<div class="columns">
+							<div class="column is-size-6 has-text-weight-bold has-text-link">
+								<p><i class="fa-brands fa-html5 mr-1"></i>HTML5</p>
+								<p><i class="fa-brands fa-square-js mr-1 mt-2"></i>Javascript</p>
+								<p><i class="fa-brands fa-vuejs mr-1 mt-2"></i>Vue</p>
+								<p><i class="fa-brands fa-bootstrap mr-1 mt-2"></i>Bootstrap</p>
+								<p><i class="fa-solid fa-j mr-1 mt-2"></i>JQuery</p>
+								<p><i class="fa-solid fa-database mr-1 mt-2"></i>MySQL</p>
+							</div>
+							<div class="column is-size-6 has-text-weight-bold has-text-link">
+								<p><i class="fa-brands fa-css3-alt mr-1"></i>CSS3</p>
+								<p><i class="fa-brands fa-react mr-1 mt-2"></i>React</p>
+								<p><i class="fa-solid fa-file-code mr-1 mt-2"></i>Bulma</p>
+								<p><i class="fa-brands fa-node-js mr-1 mt-2"></i>Node.js</p>
+								<p><i class="fa-solid fa-xmark mr-1 mt-2"></i>Express</p>
+								<p><i class="fa-solid fa-leaf mr-1 mt-2"></i>MongoDB</p>
+								<p><i class="fa-brands fa-sass mr-1 mt-2"></i>SASS</p>
+							</div>
+						</div>
+						<hr class="dropdown-divider" />
+						<div class="is-size-6 has-text-weight-bold">
+							<p><i class="fa-solid fa-flag-usa mr-1 mt-2"></i>Inglês - Intermediário</p>
+							<p><i class="fa-solid fa-comment-dots mr-1 mt-2"></i>Comunicação</p>
+							<p><i class="fa-solid fa-person-walking mr-1 mt-2"></i>Proatividade</p>
+							<p><i class="fa-solid fa-book-open mr-1 mt-2"></i>Aprendizado contínuo</p>
+						</div>
+					</div>
+				</div>
+				<div class="tile is-9 is-parent is-vertical">
+					<div class="tile is-child box has-text-centered">
+						<p class="title is-4 is-underlined">Sobre</p>
+						<p class="subtitle is-5 pt-1 has-line-height">Sou desenvolvedor web full-stack, com conhecimentos em UI Design. Procuro desenvolver minhas habilidades em conjunto com os objetivos da empresa, unindo hard e soft skills. Possuo o objetivo de elaborar, ampliar e evoluir as aplicações atuais, com foco na manutenção, reusabilidade e qualidade do código.</p>
+						<p class="title is-4 is-underlined mt-3">Experiência</p>
+						<div class="is-flex is-justify-content-space-around">
+							<p class="subtitle is-6 has-text-weight-medium is-uppercase mt-1"><i class="fa-solid fa-briefcase mr-1"></i>Freelancer</p>
+							<p class="is-6"><i class="fa-solid fa-calendar-days mr-1"></i>2022</p>
+						</div>
+						<p class="is-size-6">Realizar pequenas manutenções em sistemas, com foco na melhoria do design, da usabilidade, responsividade e acessibilidade, utilizando tecnologias como HTML, CSS, Javascript e ReactJS.</p>
+						<p class="title is-4 is-underlined mt-5" id="educacao">Educação</p>
+						<div class="is-flex is-justify-content-space-around">
+							<p class="subtitle is-6 has-text-weight-medium is-uppercase mt-1"><i class="fa-solid fa-book-bookmark mr-1"></i>Engenharia de Software</p>
+							<p class="is-6"><i class="fa-solid fa-calendar-days mr-1"></i>2022-atualmente</p>
+						</div>
+						<p class="is-size-6"><i class="fa-solid fa-building-columns mr-1"></i>Faculdade Ampli</p>
+						<p class="title is-4 is-underlined mt-5">Formação</p>
+						<div class="is-flex is-justify-content-space-around">
+							<p class="subtitle is-6 has-text-weight-medium is-uppercase mt-1"><i class="fa-solid fa-chalkboard mr-1"></i>Desenvolvimento Web Completo - 114h</p>
+							<p class="is-6"><i class="fa-solid fa-calendar-days mr-1"></i>dez/21-fev/22</p>
+						</div>
+						<p class="is-size-6">Formação completa de desenvolvimento Web, com HTML5, CSS3, SASS, Javascript, Ajax, Bootstrap, jQuery, PHP, MySQL, Ionic, MVC, API’s. Ao longo do curso diversos projetos foram desenvolvidos utilizando conceitos aprendidos, como o Twitter Clone, Miniplataforma, Game Mata Mosquito e um app mobile.</p>
+						<div class="is-flex is-justify-content-space-around mt-2">
+							<p class="subtitle is-6 has-text-weight-medium is-uppercase mt-1"><i class="fa-solid fa-chalkboard mr-1"></i>Javascript/Typescript avançado - 145h</p>
+							<p class="is-6"><i class="fa-solid fa-calendar-days mr-1"></i>mar/22-jun/22</p>
+						</div>
+						<p class="is-size-6">Formação completa incluindo Javascript moderno (ES6+) e Typescript, além de tecnologias mais utilizadas no mercado, como Webpack, Babel, React, Redux, Node, Express, MySQL, MongoDB, Next.js, Jest, Strapi, entre outros. Aborda conceitos como cibersegurança, infraestrutura, POO, Design Patterns, Regex e Princípios SOLID</p>
+					</div>
+				</div>
+				</div>
+			</div>
+		</section>
+	</div>
+
+	<script src="../js/animate.js"></script>
 </body>
 </html>
