Added projects page and search filter

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 				<div class="navbar-item has-dropdown is-hoverable">
 					<a href="#projects" class="navbar-link">Projetos</a>
 					<div class="navbar-dropdown">
-						<a class="navbar-item" href="">Front-end</a>
-						<a class="navbar-item" href="">Back-end</a>
-						<a class="navbar-item" href="">Full Stack</a>
+						<a class="navbar-item" href="./pages/projetos.html#front">Front-end</a>
+						<a class="navbar-item" href="./pages/projetos.html#back">Back-end</a>
+						<a class="navbar-item" href="./pages/projetos.html#full">Full Stack</a>
 					</div>
 				</div>
 				<a href="./pages/curriculo.html" class="navbar-item">Currículo</a>
 				<a href="./pages/curriculo.html#educacao" class="navbar-item">Educação</a>
-				<a href="./pages/sobre.html" class="navbar-item">Sobre</a>
+				<a href="./pages/curriculo.html#about" class="navbar-item">Sobre</a>
 			</div>
 			<div class="navbar-end">
 				<div class="navbar-item">
@@ -56,9 +56,9 @@
 						<p class="is-size-4 mt-3">Desenvolvedor Web Full Stack Jr | Javascript</p>
 						<hr class="dropdown-divider" />
 						<div class="mt-4 has-text-weight-medium">
-							<a class="button is-primary"><i class="fa-solid fa-laptop-code mr-2"></i>Meus Projetos</a>
-							<a class="button ml-3 is-primary"><i class="fa-solid fa-list-check mr-2"></i>Currículo</a>
-							<a class="button ml-3 is-primary"><i class="fa-solid fa-comment mr-2"></i>Contato</a>
+							<a class="button is-primary" href="./pages/projetos.html"><i class="fa-solid fa-laptop-code mr-2"></i>Meus Projetos</a>
+							<a class="button ml-3 is-primary" href="./pages/curriculo.html"><i class="fa-solid fa-list-check mr-2"></i>Currículo</a>
+							<a class="button ml-3 is-primary" href="#contact"><i class="fa-solid fa-comment mr-2"></i>Contato</a>
 						</div>
 					</div>
 					<div class="column column-background is-size-3 mt-3">
@@ -75,63 +75,45 @@
 				Confira meus principais projetos abaixo:
 			</h3>
 			<div class="is-flex is-flex-direction-row is-flex-wrap-wrap is-justify-content-space-around" data-aos="flip-up" data-aos-duration="3000">
-				<div class="card mt-4 has-card-hover is-clickable">
-					<div class="card-image">
-						<figure class="image is-16by9">
-							<img src="https://github.com/armandosouza/burgeria/raw/main/assets/screenshots/3.png" width="320" class="image-card" alt="Projeto Burgeria">
+				<div class="project-card mt-4 has-card-hover is-clickable">
+					<a href="https://armandosouza.epizy.com/burgeria" target="_blank">
+					<div class="project-card-image">
+						<figure>
+							<img src="https://raw.githubusercontent.com/armandosouza/burgeria/main/screenshot.png" alt="Projeto Burgeria">
 						</figure>
 					</div>
-					<div class="card-content">
-						<div class="media">
-							<div class="media-content">
-								<p class="title is-4"><i class="fa-solid fa-code mr-2"></i>Projeto Burgeria</p>
-								<p class="subtitle is-6"><i class="fa-solid fa-cubes mr-2"></i>HTML, CSS, Javascript</p>
-							</div>
+					<div class="project-card-content">
+						<div>
+							<p class="title is-4"><i class="fa-solid fa-code mr-2"></i>Projeto Burgeria</p>
+							<p class="subtitle is-6"><i class="fa-solid fa-cubes mr-2"></i>HTML, CSS, Javascript</p>
 						</div>
 					</div>
-					<div class="content mx-5 mb-3">
+					<div class="mx-5 mb-3 mt-1">
 						Site responsivo de uma hamburgueria fictícia, feito com HTML, CSS e Javascript.
 					</div>
+					</a>
 				</div>
-				<div class="card mt-4 has-card-hover is-clickable">
-					<div class="card-image">
-						<figure class="image is-16by9">
-							<img src="https://github.com/armandosouza/burgeria/raw/main/assets/screenshots/3.png" width="320" class="image-card" alt="Projeto Burgeria">
+				<div class="project-card mt-4 has-card-hover is-clickable">
+					<a href="https://armandosouza.epizy.com/finans">
+					<div class="project-card-image">
+						<figure>
+							<img src="https://raw.githubusercontent.com/armandosouza/finans-bootstrap/main/screenshot.png" class="image-card" alt="Finans">
 						</figure>
 					</div>
-					<div class="card-content">
-						<div class="media">
-							<div class="media-content">
-								<p class="title is-4"><i class="fa-solid fa-code mr-2"></i>Projeto Burgeria</p>
-								<p class="subtitle is-6"><i class="fa-solid fa-cubes mr-2"></i>HTML, CSS, Javascript</p>
-							</div>
+					<div class="project-card-content">
+						<div>
+							<p class="title is-4"><i class="fa-solid fa-code mr-2"></i>Finans</p>
+							<p class="subtitle is-6"><i class="fa-solid fa-cubes mr-2"></i>HTML, CSS, Bootstrap</p>
 						</div>
 					</div>
-					<div class="content mx-5 mb-3">
-						Site responsivo de uma hamburgueria fictícia, feito com HTML, CSS e Javascript.
+					<div class="mx-5 mb-3 mt-1">
+						Site simples de uma financeira feito com HTML, CSS e Bootstrap.
 					</div>
-				</div>
-				<div class="card mt-4 has-card-hover is-clickable">
-					<div class="card-image">
-						<figure class="image is-16by9">
-							<img src="https://github.com/armandosouza/burgeria/raw/main/assets/screenshots/3.png" width="320" class="image-card" alt="Projeto Burgeria">
-						</figure>
-					</div>
-					<div class="card-content">
-						<div class="media">
-							<div class="media-content">
-								<p class="title is-4"><i class="fa-solid fa-code mr-2"></i>Projeto Burgeria</p>
-								<p class="subtitle is-6"><i class="fa-solid fa-cubes mr-2"></i>HTML, CSS, Javascript</p>
-							</div>
-						</div>
-					</div>
-					<div class="content mx-5 mb-3">
-						Site responsivo de uma hamburgueria fictícia, feito com HTML, CSS e Javascript.
-					</div>
+					</a>
 				</div>
 			</div>
 			<div class="is-flex is-justify-content-center mt-5">
-				<a class="button is-link is-medium has-card-hover has-text-white has-text-weight-medium">Conferir mais projetos</a>
+				<a href="./pages/projetos.html" class="button is-link is-medium has-card-hover has-text-white has-text-weight-medium">Conferir mais projetos</a>
 			</div>
 		</section>
 		<section class="section stack">
@@ -246,7 +228,7 @@
 					<li><a href="#" class="has-text-light">Início</a></li>
 					<li><a href="#projects" class="has-text-light">Projetos</a></li>
 					<li><a href="./pages/curriculo.html" class="has-text-light">Currículo</a></li>
-					<li><a href="./pages/sobre.html" class="has-text-light">Sobre</a></li>
+					<li><a href="./pages/curriculo.html#about" class="has-text-light">Sobre</a></li>
 				</ul>
 			</nav>
 		</div>
