Fixed section height

--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -46,7 +46,7 @@
 		</div>
 	</navbar>
 	<main class="projects-page">
-		<section class="section has-text-centered">
+		<section class="section has-text-centered is-medium">
 			<h1 class="title is-2 mt-3 has-text-centered has-text-white">Projetos</h1>
 			<h2 class="subtitle is-3 mt-2 has-text-centered has-text-white">Acesse meus principais projetos listados abaixo:</h2>
 			<div class="field my-3 columns">
