new project in homepage

--- a/index.html
+++ b/index.html
@@ -111,6 +111,24 @@
 					</div>
 					</a>
 				</div>
+				<div class="project-card mt-4 has-card-hover is-clickable">
+					<a href="https://universidade-next.vercel.app/">
+					<div class="project-card-image">
+						<figure>
+							<img src="public/university.jpg" class="image-card" alt="Next University">
+						</figure>
+					</div>
+					<div class="project-card-content">
+						<div>
+							<p class="title is-4"><i class="fa-solid fa-code mr-2"></i>Next University</p>
+							<p class="subtitle is-6"><i class="fa-solid fa-cubes mr-2"></i>MongoDB, Express, React, Node.js</p>
+						</div>
+					</div>
+					<div class="mx-5 mb-3 mt-1">
+						Projeto full stack de uma universidade com cursos online.
+					</div>
+					</a>
+				</div>
 			</div>
 			<div class="is-flex is-justify-content-center mt-5">
 				<a href="./pages/projetos.html" class="button is-link is-medium has-card-hover has-text-white has-text-weight-medium">Conferir mais projetos</a>
