update github icon

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 			<nav class="foot-social mr-5">
 				<ul class="is-flex is-flex-direction-row ">
 					<li class="mx-1 has-text-centered">
-						<a href="https://github.com/armandosouza"><img src="https://cdn.icon-icons.com/icons2/2368/PNG/512/github_logo_icon_143772.png" width="40"></a>
+						<a href="https://github.com/armandosouza"><img src="https://cdn-icons-png.flaticon.com/512/536/536452.png" width="40"></a>
 						<p class="is-size-7 p-1 message is-hidden is-absolute has-transition">Github</p>
 					</li>
 					<li class="mx-1 has-text-centered">
